--- a/style.css
+++ b/style.css
@@ -40,3 +40,19 @@ div#accordionExample {
     font-size: 35px;
     margin-left: 20px;
 }
+
+@media only screen and (max-width:600px) {
+
+    .flex {
+        flex-direction: column;
+    }
+
+    .banner {
+        visibility: hidden
+    }
+
+    div#accordionExample {
+        width: 20rem;
+    }
+
+}
